2014-05-05  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_new_styling_default):
	* src/gstttmlbase.c: (gst_ttmlbase_sax2_element_end_ns):
	* src/gstttmlenums.h:
	* src/gstttmlrender.c: (gst_ttmlrender_store_layout),
	(gst_ttmlrender_new_region), (gst_ttmlrender_build_layouts),
	(gst_ttmlrender_show_regions), (gst_ttmlrender_free_region),
	(gst_ttmlrender_gen_buffer):
	* src/gstttmlstate.c: (gst_ttml_state_set_attribute),
	(gst_ttml_state_get_attribute):
	First working subtitles rendered with Pango & Cairo.
	All styles previously available through Pango markup are working.
	Region origin & extent are are working.

2014-05-05  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_color_expression),
	(gst_ttml_attribute_parse):
	Fix parsing of #rrggbbaa color expressions (We did not have alpha before).
	Fix parsing of "auto" origin expressions (We did not have regions before).

2014-05-02  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_free_region),
	(gst_ttmlrender_gen_buffer), (gst_ttmlrender_init):
	Fix leak, crash and warning.

2014-05-02  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_region_compare_zindex),
	(gst_ttmlrender_region_compare_id), (gst_ttmlrender_store_layout),
	(gst_ttmlrender_build_layouts), (gst_ttmlrender_show_region),
	(gst_ttmlrender_free_region), (gst_ttmlrender_gen_buffer),
	(gst_ttmlrender_dispose), (gst_ttmlrender_class_init),
	(gst_ttmlrender_init):
	* src/gstttmlrender.h:
	* win32/vs10/libgstfluttml_sdk.vcxproj:
	WORK IN PROGRESS: Build list of PangoLayouts corresponding to each region.
	Start using Cairo to produce (empty) buffers.

2014-04-29  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_dispose):
	Minor fix in debug output.

2014-04-29  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_base_init),